reentered cosole logs of track arrays

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,5 +9,11 @@
     <h1>Week 5 Assignment - Part 3</h1>
     <p>See console for output.</p>
     <!-- Create an unordered list with any questions you have -->
+    <ul>
+      <li> I created a function to sort tracks for this project that was mostly about practicing connecting coding concepts to actual accomplishable goals.
+      <li> I was only partially succesful and wrote more detailed notes in the code comments.
+      <li> When I logged the search function with the goal of it finding results (line 239), I commented it because of how much space it takes up in the console.
+      <li> I wondered if there's a way to clean up the appearance of that somehow, like hiding the jam-packed array and only showing the neatly ordered list of results.
+       
   </body>
 </html>
